Adapted theme font size. Refactored Dot component.

--- a/theme/global.css
+++ b/theme/global.css
@@ -1,7 +1,7 @@
 .hover-underline-animation {
     display: inline-block;
     position: relative;
-    color: #F9248F;
+    color: #F9248FB3;
 }
 
 .hover-underline-animation:after {
@@ -9,10 +9,10 @@
     position: absolute;
     width: 100%;
     transform: scaleX(0);
-    height: 2px;
+    height: 4px;
     bottom: 0;
     left: 0;
-    background-color: #F9248F;
+    background-color: #F9248FB3;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
