--- a/theme/global.css
+++ b/theme/global.css
@@ -41,3 +41,48 @@
 .image-gallery img {
     border-radius: 10px;
 }
+
+/* Scroll Down */
+
+.scrolldown-wrapper {
+    left: 50%;
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.scrolldown {
+    border-radius: 30px;
+    height: 46px;
+    margin: 0 auto 8px;
+    text-align: -webkit-center;
+    width: 30px;
+}
+
+.scrolldown-p1,
+.scrolldown-p2 {
+    animation-duration: 1.5s;
+    animation-name: scrolldown;
+    animation-iteration-count: infinite;
+}
+
+.scrolldown-p2 {
+    animation-delay: .75s;
+}
+
+@keyframes scrolldown {
+    0% {
+        opacity: 0;
+        transform: translate(0, -8px);
+    }
+    50% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+    100% {
+        opacity: 0;
+        transform: translate(0, 8px);
+    }
+}
